welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:23: error: not found: type offset
    setBrushColor(array[offset])
                        ^Array2:23: error: variable array of type Array[java.awt.Color] does not take type parameters.
    setBrushColor(array[offset])
                       ^